feat: mail template crud api
